# seaorm-rust

./: .gitignore  README.md
actix-example/: .env  Cargo.toml  db.sqlite
actix-example/entity/: Cargo.toml
actix-example/entity/src/: post.rs
actix-example/migration/: Cargo.toml
actix-example/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241226_100424_create_user_table.rs
actix-example/src/: main.rs
actix-example/src/routes/: auth_routes.rs  home_route.rs  mod.rs  post_routes.rs  user_routes.rs
actix-example/src/routes/handlers/: auth_handlers.rs  home_handler.rs  mod.rs  post_handlers.rs  user_handler.rs
actix-example/src/routes/middlewares/: auth_middleware.rs
actix-example/src/utils/: api_response.rs  constants.rs  jwt.rs
bakery-backend/: Cargo.toml  sqlite.db
bakery-backend/migration/: Cargo.toml
bakery-backend/migration/src/: lib.rs  m20241220_000001_create_bakery_table.rs  m20241220_000002_create_chef_table.rs
bakery-backend/src/: main.rs
bakery-backend/src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs
docs-site/: Cargo.toml
docs-site/src/: main.rs
