[package]
name = "actix-example"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4"
serde = "1.0.197"
entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0.1"
env_logger = "0.11.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.5.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.23.0"
actix-multipart = "0.7.2"
sanitize-filename = "0.6.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
